# Pulsar

./: .gitignore  README.md  pyproject.toml
src/pulsar/: __init__.py  __main__.py  cli.py
src/pulsar/config/: __init__.py
src/pulsar/ui/: __init__.py  console.py  display.py  spinner.py  themes.py
