[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-agent"
version = "0.1.0"
description = "A multi-provider terminal AI coding agent with a premium TUI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ashutosh", email = "ashutosh@example.com"}
]
keywords = ["ai", "agent", "coding", "terminal", "llm", "gemini", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-genai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pulsar = "pulsar.cli:main"

[project.urls]
Homepage = "https://github.com/Ashutoshx7/Pulsar"
Repository = "https://github.com/Ashutoshx7/Pulsar"

[tool.setuptools.packages.find]
where = ["src"]
